--- a/_posts/2023-08-26-cnedu.html
+++ b/_posts/2023-08-26-cnedu.html
@@ -1,17 +1,23 @@
 ---
 layout: post
-title: '【原版补档】我们的教育弄虚作假，到底是为了什么？'
+title: '【原版补档】我们的教育弄虚作假，到底是为了什么？ - 哔哩哔哩'
 date: 2023-08-26
 categories: 社会问题
-tags: 视频 社会问题
+tags: 视频 社会问题 哔哩哔哩 自由哔哩
 ---
 
-<h4>本视频原作者 <a href="https://space.bilibili.com/381593208" target="_blank">一只柴犬7</a>，视频现已删除，并被 peasoft 恢复。</h4>
+<h3>本视频原作者 <a href="https://space.bilibili.com/381593208" target="_blank">一只柴犬7</a>，视频现已删除，并被 peasoft 恢复，请放心观看。如果本网站出现无法访问等情况，请自行使用魔法。</h3>
 
-<video id="v" class="video-js vjs-default-skin" controls>
+<video id="v" class="video-js vjs-default-skin" poster="https://fastly.jsdelivr.net/gh/peasoft/media@master/cnedu/cover.webp" controls>
   <source src="https://fastly.jsdelivr.net/gh/peasoft/media@master/cnedu/video.m3u8" type="application/x-mpegURL">
 </video>
 <link href="https://cdn.bootcdn.net/ajax/libs/video.js/8.3.0/video-js.min.css" rel="stylesheet">
+<style>
+.video-js {
+    left: 50%;
+    transform: translateX(-50%);
+}
+</style>
 <script src="https://cdn.bootcdn.net/ajax/libs/video.js/8.3.0/video.min.js"></script>
 <script>var player=videojs('v')</script>
 
