--- a/_posts/2023-08-26-cnedu.html
+++ b/_posts/2023-08-26-cnedu.html
@@ -17,6 +17,9 @@ tags: 视频 社会问题 哔哩哔哩 自由哔哩
     left: 50%;
     transform: translateX(-50%);
 }
+.vjs-poster {
+    display: none;
+}
 </style>
 <script src="https://cdn.bootcdn.net/ajax/libs/video.js/8.3.0/video.min.js"></script>
 <script>var player=videojs('v')</script>
