--- a/_posts/2023-08-26-cnedu.html
+++ b/_posts/2023-08-26-cnedu.html
@@ -8,8 +8,8 @@ tags: 视频 社会问题 哔哩哔哩 自由哔哩
 
 <h3>本视频原作者 <a href="https://space.bilibili.com/381593208" target="_blank">一只柴犬7</a>，视频现已删除，并被 peasoft 恢复，请放心观看。如果本网站出现无法访问等情况，请自行使用魔法。</h3>
 
-<video id="v" class="video-js vjs-default-skin" poster="https://fastly.jsdelivr.net/gh/peasoft/media@master/cnedu/cover.webp" controls>
-  <source src="https://fastly.jsdelivr.net/gh/peasoft/media@master/cnedu/video.m3u8" type="application/x-mpegURL">
+<video id="v" class="video-js vjs-default-skin" poster="https://cdn.staticaly.com/gh/peasoft/media/master/cnedu/cover.webp" controls>
+  <source src="https://ghproxy.net/https://raw.githubusercontent.com/peasoft/media/master/cnedu/video.m3u8" type="application/x-mpegURL">
 </video>
 <link href="https://cdn.bootcdn.net/ajax/libs/video.js/8.3.0/video-js.min.css" rel="stylesheet">
 <style>
