--- a/_posts/2023-08-26-cnedu.html
+++ b/_posts/2023-08-26-cnedu.html
@@ -6,10 +6,14 @@ categories: 社会问题
 tags: 视频 社会问题 哔哩哔哩 自由哔哩
 ---
 
-<h3>本视频原作者 <a href="https://space.bilibili.com/381593208" target="_blank">一只柴犬7</a>，视频现已删除，并被 peasoft 恢复，请放心观看。如果本网站出现无法访问等情况，请自行使用魔法。视频播放可能会卡顿，请谅解。如果您在手机上无法播放视频，请更换浏览器。</h3>
+<h3>本视频原作者 <a href="https://space.bilibili.com/381593208" target="_blank">一只柴犬7</a>，视频现已删除，并被 peasoft 恢复，请放心观看。如果本网站出现无法访问等情况，请自行使用魔法。视频播放可能会卡顿，请谅解。如果您在手机上无法播放视频，请更换浏览器。<a href="https://archive.org/details/ec8f60c687c0c1a7567ca40a0b162c1c">互联网档案馆存档（需魔法）</a></h3>
 
 <video id="v" class="video-js vjs-default-skin" poster="https://gcore.jsdelivr.net/gh/peasoft/media@master/cnedu/cover.webp" controls>
+  <source src="https://gh-proxy.com/https://raw.githubusercontent.com/peasoft/media/master/cnedu/video.m3u8" type="application/x-mpegURL">
   <source src="https://ghproxy.com/https://raw.githubusercontent.com/peasoft/media/master/cnedu/video.m3u8" type="application/x-mpegURL">
+  <source src="https://raw.fgit.cf/peasoft/media/master/cnedu/video.m3u8" type="application/x-mpegURL">
+  <source src="https://jsdelivr.b-cdn.net/gh/peasoft/media@master/cnedu/video.m3u8" type="application/x-mpegURL">
+  <source src="https://fastly.jsdelivr.net/gh/peasoft/media@master/cnedu/video.m3u8" type="application/x-mpegURL">
 </video>
 <link href="https://cdn.bootcdn.net/ajax/libs/video.js/8.3.0/video-js.min.css" rel="stylesheet">
 <style>
@@ -63,11 +67,11 @@ Epic Soul Factory,Cesc Vilà,Fran Soto - Everdream
 
 视频中用到的视频素材（按顺序）：
 
-衡水中学食堂：<a target="_blank" href="//www.bilibili.com/video/BV1yZ4y1X7LF/?spm_id_from=333.788.video.desc.click">BV1yZ4y1X7LF</a>
-芬兰教育：<a target="_blank" href="//www.bilibili.com/video/BV1XT4y1G79V/?spm_id_from=333.788.video.desc.click">BV1XT4y1G79V</a>
-4岁小孩玩Apex：<a target="_blank" href="//www.bilibili.com/video/BV1SY4y1T7BP/?spm_id_from=333.788.video.desc.click">BV1SY4y1T7BP</a>
-我体验了5个不同地区的CSGO：<a target="_blank" href="//www.bilibili.com/video/BV1Dj411G7zM/?spm_id_from=333.788.video.desc.click">BV1Dj411G7zM</a>
-老外看使命召唤：<a target="_blank" href="//www.bilibili.com/video/BV1yW4y1h7wD/?spm_id_from=333.788.video.desc.click">BV1yW4y1h7wD</a>
+衡水中学食堂：<a target="_blank" href="//www.bilibili.com/video/BV1yZ4y1X7LF">BV1yZ4y1X7LF</a>
+芬兰教育：<a target="_blank" href="//www.bilibili.com/video/BV1XT4y1G79V">BV1XT4y1G79V</a>
+4岁小孩玩Apex：<a target="_blank" href="//www.bilibili.com/video/BV1SY4y1T7BP">BV1SY4y1T7BP</a>
+我体验了5个不同地区的CSGO：<a target="_blank" href="//www.bilibili.com/video/BV1Dj411G7zM">BV1Dj411G7zM</a>
+老外看使命召唤：<a target="_blank" href="//www.bilibili.com/video/BV1yW4y1h7wD">BV1yW4y1h7wD</a>
 ——————
 视频中有使用到已公开的moss语音模型制作
 与配音演员本人，原作，电影设定无关
