--- a/_posts/2023-08-26-cnedu.html
+++ b/_posts/2023-08-26-cnedu.html
@@ -4,6 +4,8 @@ title: '【原版补档】我们的教育弄虚作假，到底是为了什么？
 date: 2023-08-26
 categories: 社会问题
 tags: 视频 社会问题 哔哩哔哩 自由哔哩
+cover: 'https://gcore.jsdelivr.net/gh/peasoft/media@master/cnedu/cover.webp'
+author: 一只柴犬7
 ---
 
 <h3>本视频原作者 <a href="https://space.bilibili.com/381593208" target="_blank">一只柴犬7</a>，视频现已删除，并被 peasoft 恢复，请放心观看。如果本网站出现无法访问等情况，请自行使用魔法。视频播放可能会卡顿，请谅解。如果您在手机上无法播放视频，请更换浏览器。<a href="https://archive.org/details/ec8f60c687c0c1a7567ca40a0b162c1c">互联网档案馆存档（需魔法）</a></h3>
