--- a/_posts/2023-08-26-cnedu.html
+++ b/_posts/2023-08-26-cnedu.html
@@ -17,7 +17,7 @@ author: 一只柴犬7
   <source src="https://jsdelivr.b-cdn.net/gh/peasoft/media@master/cnedu/video.m3u8" type="application/x-mpegURL">
   <source src="https://fastly.jsdelivr.net/gh/peasoft/media@master/cnedu/video.m3u8" type="application/x-mpegURL">
 </video>
-<link href="https://cdn.bootcdn.net/ajax/libs/video.js/8.3.0/video-js.min.css" rel="stylesheet">
+<link href="https://mirrors.sustech.edu.cn/cdnjs/ajax/libs/video.js/8.3.0/video-js.min.css" rel="stylesheet">
 <style>
 .video-js {
     left: 50%;
@@ -27,7 +27,7 @@ author: 一只柴犬7
     display: none;
 }
 </style>
-<script src="https://cdn.bootcdn.net/ajax/libs/video.js/8.3.0/video.min.js"></script>
+<script src="https://mirrors.sustech.edu.cn/cdnjs/ajax/libs/video.js/8.3.0/video.min.js"></script>
 <script>
 var player = videojs('v', {
   html5: {
