--- a/_posts/2023-08-26-cnedu.html
+++ b/_posts/2023-08-26-cnedu.html
@@ -11,7 +11,7 @@ author: 一只柴犬7
 <h3>本视频原作者 <a href="https://space.bilibili.com/381593208" target="_blank">一只柴犬7</a>，视频现已删除，并被 peasoft 恢复，请放心观看。如果本网站出现无法访问等情况，请自行使用魔法。视频播放可能会卡顿，请谅解。如果您在手机上无法播放视频，请更换浏览器。<a href="https://archive.org/details/ec8f60c687c0c1a7567ca40a0b162c1c">互联网档案馆存档（需魔法）</a></h3>
 
 <video id="v" class="video-js vjs-default-skin" poster="https://gcore.jsdelivr.net/gh/peasoft/media@master/cnedu/cover.webp" controls>
-  <source src="https://peasoft.pages.dev/camo/https://raw.githubusercontent.com/peasoft/media/master/cnedu/video.m3u8" type="application/x-mpegURL">
+  <source src="https://7327638.xyz/camo/https://raw.githubusercontent.com/peasoft/media/master/cnedu/video.m3u8" type="application/x-mpegURL">
   <source src="https://raw.githubusercontent.com/peasoft/media/master/cnedu/video.m3u8" type="application/x-mpegURL">
 </video>
 <link href="https://mirrors.sustech.edu.cn/cdnjs/ajax/libs/video.js/8.3.0/video-js.min.css" rel="stylesheet">
